--- a/BlackWinformsTest/Properties/Resources.resx
+++ b/BlackWinformsTest/Properties/Resources.resx
@@ -136,4 +136,10 @@
   <data name="GridLayout5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GridLayout5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RemoveGridLayout" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RemoveGridLayout.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RemoveGridLayout2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RemoveGridLayout2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
